src/styles/globals.css
@font-face {
  font-family: "Fira Code";
  src: url("../assets/fonts/FiraCode-SemiBold.ttf");
}

html,
body {
  --pri-bgd-clr: 255, 255, 255;
  --pri-clr: 93, 63, 202;
  --pri-clr-drk: 41, 26, 96;
  --pri-shadow: 0px 10px 50px 0px rgba(39, 52, 59, 0.18);
  --sec-bgd-clr: 239, 240, 242;
  --sec-clr: 39, 52, 59;
  --ter-clr: 2, 32, 68;

  --err-clr: 123, 1, 0;
  --err-bgd-clr: 123, 1, 0;

  padding: 0;
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
  background-color: var(--pri-bgd-clr) !important;
  caret-color: transparent;
}

body::-webkit-scrollbar {
  width: 8px;
  border-radius: 4px;
  background-color: rgba(var(--sec-bgd-clr), 1);
}

body::-webkit-scrollbar-thumb {
  border-radius: 8px;
  box-shadow: inset;
  -webkit-box-shadow: inset var(--pri-shadow);
  background-color: rgba(var(--sec-bgd-clr), 0.8);
}

body::-webkit-scrollbar-thumb:hover {
  background-color: rgba(var(--pri-clr-drk), 1);
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

.container {
  min-height: 100vh;
  padding: 0 0.5rem;
}

.jumbotron {
  background-color: rgb(var(--pri-bgd-clr)) !important;
  color: rgb(var(--sec-clr));
}

@media (max-width: 600px) {
  #contactForm {
    border: none;
    padding-right: 0px;
  }

  /* body::-webkit-scrollbar {
    display: none;
  }
  body::-webkit-scrollbar-thumb {
    display: none;
  }

  body::-webkit-scrollbar-thumb:hover {
    display: none;
  }
  body::-webkit-scrollbar-track {
    display: none;
  } */
}

#top-stripe {
  min-height: 25px;
  max-height: 25px;
  height: 100%;
  background-color: rgb(var(--pri-clr-drk));
  width: 100vw;
}

